--- a/Task2/style.css
+++ b/Task2/style.css
@@ -144,3 +144,17 @@ h2{
 ::-webkit-scrollbar-thumb{
     background: #fff
 }
+
+
+
+@media(max-width: 426px){
+    .box{
+        width: 350px;
+    }
+}
+
+@media(max-width: 321px){
+    .box{
+        width: 300px;
+    }
+}
